--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,11 +30,7 @@ test-work:
   tags:
     - test
   script:
-    - (cd src/cat && make test) 2>/dev/null 1>cat_test.txt
-    - (cd ../grep && make test) 2>/dev/null 1>grep_test.txt
-    - !
-      if ! grep -q "FAIL: 0" cat_test.txt || ! grep -q "FAIL: 0" grep_test.txt; then
-        exit 1;
-      fi
+    - cd src/cat && make test
+    - cd ../grep && make test
   only:
     - develop
